--- a/ISRA Dummy Project/ISRA Dummy Project.csproj
+++ b/ISRA Dummy Project/ISRA Dummy Project.csproj
@@ -67,14 +67,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Advisor_AdminPage.aspx" />
     <Content Include="Advisor_SearchPage.aspx" />
     <Content Include="Advisor_StudentDetail.aspx" />
+    <Content Include="Faculty_MemberSearch.aspx" />
+    <Content Include="Faculty_MemberStatus.aspx" />
     <Content Include="Student_EndPage.aspx" />
     <Content Include="Student_IndStudyForm.aspx" />
     <Content Include="Student_UrpForm.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Advisor_AdminPage.aspx.cs">
+      <DependentUpon>Advisor_AdminPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Advisor_AdminPage.aspx.designer.cs">
+      <DependentUpon>Advisor_AdminPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Advisor_SearchPage.aspx.cs">
       <DependentUpon>Advisor_SearchPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -88,6 +98,20 @@
     </Compile>
     <Compile Include="Advisor_StudentDetail.aspx.designer.cs">
       <DependentUpon>Advisor_StudentDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Faculty_MemberSearch.aspx.cs">
+      <DependentUpon>Faculty_MemberSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Faculty_MemberSearch.aspx.designer.cs">
+      <DependentUpon>Faculty_MemberSearch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Faculty_MemberStatus.aspx.cs">
+      <DependentUpon>Faculty_MemberStatus.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Faculty_MemberStatus.aspx.designer.cs">
+      <DependentUpon>Faculty_MemberStatus.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student_EndPage.aspx.cs">
