--- a/ISRA Dummy Project/ISRA Dummy Project.csproj
+++ b/ISRA Dummy Project/ISRA Dummy Project.csproj
@@ -122,6 +122,13 @@
       <DependentUpon>General_LandingPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Site1.Master.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site1.Master.designer.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
     <Compile Include="Student_EndPage.aspx.cs">
       <DependentUpon>Student_EndPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -146,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Site1.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
