I pretty much finished the advisor search page, I also added a folder where we can put all of our images.

--- a/ISRA Dummy Project/ISRA Dummy Project.csproj
+++ b/ISRA Dummy Project/ISRA Dummy Project.csproj
@@ -70,9 +70,12 @@
     <Content Include="Advisor_Admin.aspx" />
     <Content Include="Advisor_RequestDetails.aspx" />
     <Content Include="Advisor_Search.aspx" />
+    <Content Include="Advisor_Search.css" />
     <Content Include="FacultyMember_Search.aspx" />
     <Content Include="General_LandingPage.aspx" />
     <Content Include="General_StatusPage.aspx" />
+    <Content Include="nav.css" />
+    <Content Include="pics\is.png" />
     <Content Include="Student_Confirmation.aspx" />
     <Content Include="Student_RequestForm.aspx" />
     <Content Include="Student_Search.aspx" />
