--- a/ISRA Dummy Project/ISRA Dummy Project.csproj
+++ b/ISRA Dummy Project/ISRA Dummy Project.csproj
@@ -88,8 +88,7 @@
     </Content>
     <Content Include="images\research.PNG" />
     <Content Include="images\study.PNG" />
-    <Content Include="nav.css" />
-    <Content Include="pics\is.png" />
+    <Content Include="styles\nav.css" />
     <Content Include="Student_Confirmation.aspx">
       <BrowseToURL>Student_Confirmation.aspx</BrowseToURL>
     </Content>
