style: thank you page

--- a/ISRA Dummy Project/ISRA Dummy Project.csproj
+++ b/ISRA Dummy Project/ISRA Dummy Project.csproj
@@ -87,7 +87,7 @@
     <Content Include="General_StatusPage.aspx">
       <BrowseToURL>General_StatusPage.aspx</BrowseToURL>
     </Content>
-    <Content Include="images\greencheck.png" />
+    <Content Include="images\checked.png" />
     <Content Include="images\prof_approval.PNG" />
     <Content Include="images\research.PNG" />
     <Content Include="images\study.PNG" />
